--- a/00baseDatos/actualizacionBaseDatos.qmd
+++ b/00baseDatos/actualizacionBaseDatos.qmd
@@ -43,8 +43,51 @@ especies.tabla
 baseDatos$especies <- especies.tabla
 
 write.csv(baseDatos$especies, "tablas/especies.csv", row.names = FALSE)
-saveRDS(baseDatos, file = "baseDatos.RDS")
 
+```
+
+## Matrices bipartitas
+
+```{r mbipartitas}
+
+fuentes <- unique(matriz.general$ID)
+fuentes <- substr(x = fuentes, start = regexpr(pattern = "_", text = fuentes)+1,  stop = nchar(fuentes))
+
+fuentes <- fuentes[2:48]
+
+
+for(fuentes.i in fuentes){
+  file.fuente <- list.files("datosOriginales/")[
+    grep(pattern = fuentes.i, 
+         substr(x = list.files("datosOriginales/"), 1,5))]
+  print(file.fuente)
+  
+  archivos <- list.files(paste("datosOriginales/",file.fuente,sep=""))
+  
+  archivos.csv <- archivos[grep(pattern = ".csv", x = archivos)]
+  archivo.csv.i <- archivos.csv[grep(pattern = fuentes.i, x = archivos.csv)]
+  
+  matriz.i <- 
+    read.csv(file.path("datosOriginales/",file.fuente,archivo.csv.i))
+  matriz.i2 <- 
+    read.csv2(file.path("datosOriginales/",file.fuente,archivo.csv.i))
+  
+  if(ncol(matriz.i)>1){baseDatos[[paste("matriz",fuentes.i,sep=".")]] <- matriz.i}
+  if(ncol(matriz.i)==1){baseDatos[[paste("matriz",fuentes.i,sep=".")]] <- matriz.i2}
+  
+  
+  # if(isTRUE(file.fuente)){
+    # files.csv <- grep(pattern = ".csv",
+                     # x = list.files(paste("datosOriginales/",file.fuente,sep="")))
+  # }
+  
+}
+
+baseDatos$matriz.001
+
+saveRDS(baseDatos, file = "baseDatos.RDS")
+library("writexl")
+writexl::write_xlsx(baseDatos, path = "baseDatos.xlsx")
 ```
 
 
